--- a/index.html
+++ b/index.html
@@ -1,41 +1,301 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yüksel Alkış | Portföy</title>
-    <link rel="stylesheet" href="index.css" />
+    <title>Yüksel Alkış | Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
-    <div class="container">
-      <header>
-        <h1>Yüksel Alkış</h1>
-        <p>Mobil & Flutter Geliştirici</p>
-      </header>
+    <nav id="desktop-nav">
+      <div class="logo">Yüksel Alkış</div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <nav id="hamburger-nav">
+      <div class="logo">Yüksel Alkış</div>
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
+          <span></span><span></span><span></span>
+        </div>
+        <div class="menu-links">
+          <li><a href="#about" onclick="toggleMenu()">About</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+        </div>
+      </div>
+    </nav>
 
-      <section class="projects">
-        <h2>Projelerim</h2>
+    <section id="profile">
+      <div class="section__pic-container">
+        <img
+          src="./assets/profile-pic.png"
+          alt="Yüksel Alkış profile picture"
+        />
+      </div>
+      <div class="section__text">
+        <p class="section__text__p1">Hello, I'm</p>
+        <h1 class="title">Yüksel Alkış</h1>
+        <p class="section__text__p2">Flutter Developer</p>
+        <div class="btn-container">
+          <button
+            class="btn btn-color-2"
+            onclick="window.open('./assets/yuksel-cv.pdf')"
+          >
+            Download CV
+          </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+            Contact Info
+          </button>
+        </div>
+        <div id="socials-container">
+          <img
+            src="./assets/linkedin.png"
+            class="icon"
+            alt="LinkedIn"
+            onclick="location.href='https://www.linkedin.com/in/yukselalkis'"
+          />
+          <img
+            src="./assets/github.png"
+            class="icon"
+            alt="GitHub"
+            onclick="location.href='https://github.com/yukseelalkis'"
+          />
+        </div>
+      </div>
+    </section>
 
-        <div class="project-card">
-          <h3>Weather App</h3>
+    <section id="about">
+      <p class="section__text__p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section__pic-container">
+          <img
+            src="./assets/about-pic.png"
+            alt="About picture"
+            class="about-pic"
+          />
+        </div>
+        <div class="about-details-container">
+          <div class="about-containers">
+            <div class="details-container">
+              <img
+                src="./assets/experience.png"
+                class="icon"
+                alt="Experience"
+              />
+              <h3>Experience</h3>
+              <p>1+ year<br />Mobile Development</p>
+            </div>
+            <div class="details-container">
+              <img src="./assets/education.png" class="icon" alt="Education" />
+              <h3>Education</h3>
+              <p>
+                B.Sc. Computer Engineering<br />İskenderun Teknik Üniversitesi
+              </p>
+            </div>
+          </div>
+          <div class="text-container">
+            <p>
+              Flutter ile mobil uygulamalar geliştiriyorum. API entegrasyonu,
+              temiz kod ve modern UI üzerine çalışıyorum. .NET ve MSSQL
+              teknolojileriyle back-end tarafında da geliştirmeler yapıyorum.
+            </p>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+      />
+    </section>
+
+    <section id="experience">
+      <p class="section__text__p1">Explore My</p>
+      <h1 class="title">Experience</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <h2 class="experience-sub-title">Mobile & Frontend</h2>
+            <div class="article-container">
+              <article>
+                <img src="./assets/checkmark.png" class="icon" />
+                <div>
+                  <h3>Flutter</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" class="icon" />
+                <div>
+                  <h3>Dart</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" class="icon" />
+                <div>
+                  <h3>HTML/CSS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" class="icon" />
+                <div>
+                  <h3>JavaScript</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="experience-sub-title">Backend & Tools</h2>
+            <div class="article-container">
+              <article>
+                <img src="./assets/checkmark.png" class="icon" />
+                <div>
+                  <h3>C# / .NET</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" class="icon" />
+                <div>
+                  <h3>MSSQL</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="./assets/checkmark.png" class="icon" />
+                <div>
+                  <h3>Git</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        class="icon arrow"
+        onclick="location.href='./#projects'"
+      />
+    </section>
+
+    <section id="projects">
+      <p class="section__text__p1">Browse My Recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="experience-details-container">
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/weather-app.png"
+                alt="Weather App"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Weather App</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/yukseelalkis/weather_app'"
+              >
+                GitHub
+              </button>
+            </div>
+          </div>
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/todolist.png"
+                alt="TodoList App"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">TodoList App</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/yukseelalkis/TodoList'"
+              >
+                GitHub
+              </button>
+            </div>
+          </div>
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/fintrack.png"
+                alt="FinTrack App"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">FinTrack</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/yukseelalkis/Fintrack'"
+              >
+                GitHub
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        class="icon arrow"
+        onclick="location.href='./#contact'"
+      />
+    </section>
+
+    <section id="contact">
+      <p class="section__text__p1">Get in Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img src="./assets/email.png" class="icon contact-icon email-icon" />
           <p>
-            Gerçek zamanlı hava durumu uygulaması – Flutter, Dio, BLoC
-            kullanıldı.
+            <a href="mailto:yukselalkis145@gmail.com"
+              >yukselalkis145@gmail.com</a
+            >
           </p>
-          <a href="https://github.com/yukseelalkis/weather_app" target="_blank"
-            >GitHub'da Gör</a
-          >
         </div>
+        <div class="contact-info-container">
+          <img src="./assets/linkedin.png" class="icon contact-icon" />
+          <p><a href="https://www.linkedin.com/in/yukselalkis">LinkedIn</a></p>
+        </div>
+      </div>
+    </section>
 
-        <div class="project-card">
-          <h3>Todo List</h3>
-          <p>Yapılacaklar listesi uygulaması – Provider ile state yönetimi.</p>
-          <a href="https://github.com/yukseelalkis/TodoList" target="_blank"
-            >GitHub'da Gör</a
-          >
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
         </div>
-      </section>
-    </div>
-    <script src="index.js"></script>
+      </nav>
+      <p>Copyright © 2025 Yüksel Alkış. All Rights Reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
