--- a/index.html
+++ b/index.html
@@ -104,12 +104,18 @@
               </p>
             </div>
           </div>
-          <div class="text-container">
-            <p>
-              Flutter ile mobil uygulamalar geliştiriyorum. API entegrasyonu,
-              temiz kod ve modern UI üzerine çalışıyorum. .NET ve MSSQL
-              teknolojileriyle back-end tarafında da geliştirmeler yapıyorum.
-            </p>
+      <div class="text-container">
+  <p>
+    I'm Yüksel, a Computer Engineering graduate from Iskenderun Technical University.
+    I specialize in Flutter and .NET development, with a strong passion for building efficient,
+    user-friendly, and visually appealing mobile applications and backend systems.
+  </p>
+  <p>
+    I enjoy exploring new technologies and continuously improving my skills.
+    With a solid foundation in software engineering principles, I am eager to contribute to impactful projects
+    and grow as a mobile & backend developer.
+         </p>
+            </div>
           </div>
         </div>
       </div>
