--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <span></span><span></span><span></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>
+          <li><a href="#about" onclick="toggleMenu()">About</a></li>assets
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
@@ -38,7 +38,7 @@
     <section id="profile">
       <div class="section__pic-container">
         <img
-          src="./assets/profile-pic.png"
+          src="assets/profile-pic.png"
           alt="Yüksel Alkış profile picture"
         />
       </div>
@@ -49,7 +49,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/yuksel-cv.pdf')"
+            onclick="window.open('assets/yuksel-cv.pdf')"
           >
             Download CV
           </button>
@@ -59,13 +59,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="assets/linkedin.png"
             class="icon"
             alt="LinkedIn"
-            onclick="location.href='https://www.linkedin.com/in/yukselalkis'"
+            onclick="location.href='www.linkedin.com/in/yüksel-alkış'"
           />
           <img
-            src="./assets/github.png"
+            src="assets/github.png"
             class="icon"
             alt="GitHub"
             onclick="location.href='https://github.com/yukseelalkis'"
@@ -74,13 +74,13 @@
       </div>
     </section>
 
-    <section id="about">
+assets    <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="assets/about-pic.png"
             alt="About picture"
             class="about-pic"
           />
@@ -89,7 +89,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="assets/experience.png"
                 class="icon"
                 alt="Experience"
               />
@@ -97,7 +97,7 @@
               <p>1+ year<br />Mobile Development</p>
             </div>
             <div class="details-container">
-              <img src="./assets/education.png" class="icon" alt="Education" />
+              <img src="assets/education.png" class="icon" alt="Education" />
               <h3>Education</h3>
               <p>
                 B.Sc. Computer Engineering<br />İskenderun Teknik Üniversitesi
@@ -120,7 +120,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="assets/arrow.png"
         class="icon arrow"
         onclick="location.href='./#experience'"
       />
@@ -135,28 +135,28 @@
             <h2 class="experience-sub-title">Mobile & Frontend</h2>
             <div class="article-container">
               <article>
-                <img src="./assets/checkmark.png" class="icon" />
+                <img src=".assets/checkmark.png" class="icon" />
                 <div>
                   <h3>Flutter</h3>
                   <p>Experienced</p>
                 </div>
               </article>
               <article>
-                <img src="./assets/checkmark.png" class="icon" />
+                <img src="assets/checkmark.png" class="icon" />
                 <div>
                   <h3>Dart</h3>
                   <p>Experienced</p>
                 </div>
               </article>
               <article>
-                <img src="./assets/checkmark.png" class="icon" />
+                <img src="assets/checkmark.png" class="icon" />
                 <div>
                   <h3>HTML/CSS</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
               <article>
-                <img src="./assets/checkmark.png" class="icon" />
+                <img src="assets/checkmark.png" class="icon" />
                 <div>
                   <h3>JavaScript</h3>
                   <p>Basic</p>
@@ -168,21 +168,21 @@
             <h2 class="experience-sub-title">Backend & Tools</h2>
             <div class="article-container">
               <article>
-                <img src="./assets/checkmark.png" class="icon" />
+                <img src="assets/checkmark.png" class="icon" />
                 <div>
                   <h3>C# / .NET</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
               <article>
-                <img src="./assets/checkmark.png" class="icon" />
+                <img src="assets/checkmark.png" class="icon" />
                 <div>
                   <h3>MSSQL</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
               <article>
-                <img src="./assets/checkmark.png" class="icon" />
+                <img src="assets/checkmark.png" class="icon" />
                 <div>
                   <h3>Git</h3>
                   <p>Intermediate</p>
@@ -193,7 +193,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="assets/arrow.png"
         class="icon arrow"
         onclick="location.href='./#projects'"
       />
@@ -207,7 +207,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/weather-app.png"
+                src="assets/weather-app.png"
                 alt="Weather App"
                 class="project-img"
               />
@@ -226,7 +226,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/todolist.png"
+                src="assets/todolist.png"
                 alt="TodoList App"
                 class="project-img"
               />
@@ -245,7 +245,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/fintrack.png"
+                src="assets/fintrack.png"
                 alt="FinTrack App"
                 class="project-img"
               />
@@ -263,7 +263,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="assets/arrow.png"
         class="icon arrow"
         onclick="location.href='./#contact'"
       />
@@ -274,7 +274,7 @@
       <h1 class="title">Contact Me</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
-          <img src="./assets/email.png" class="icon contact-icon email-icon" />
+          <img src="assets/email.png" class="icon contact-icon email-icon" />
           <p>
             <a href="mailto:yukselalkis145@gmail.com"
               >yukselalkis145@gmail.com</a
@@ -282,8 +282,8 @@
           </p>
         </div>
         <div class="contact-info-container">
-          <img src="./assets/linkedin.png" class="icon contact-icon" />
-          <p><a href="https://www.linkedin.com/in/yukselalkis">LinkedIn</a></p>
+          <img src="assets/linkedin.png" class="icon contact-icon" />
+          <p><a href="www.linkedin.com/in/yüksel-alkış">LinkedIn</a></p>
         </div>
       </div>
     </section>
