--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,7 +28,7 @@
           <span></span><span></span><span></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>assets
+          <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
@@ -135,28 +136,28 @@ assets    <section id="about">
             <h2 class="experience-sub-title">Mobile & Frontend</h2>
             <div class="article-container">
               <article>
-                <img src=".assets/checkmark.png" class="icon" />
+                <img src="assets/flutter.png" class="icon" />
                 <div>
                   <h3>Flutter</h3>
                   <p>Experienced</p>
                 </div>
               </article>
               <article>
-                <img src="assets/checkmark.png" class="icon" />
+                <img src="assets/dart.png" class="icon" />
                 <div>
                   <h3>Dart</h3>
                   <p>Experienced</p>
                 </div>
               </article>
               <article>
-                <img src="assets/checkmark.png" class="icon" />
+                <img src="assets/html_css.png" class="icon" />
                 <div>
                   <h3>HTML/CSS</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
               <article>
-                <img src="assets/checkmark.png" class="icon" />
+                <img src="assets/dart.png" class="icon" />
                 <div>
                   <h3>JavaScript</h3>
                   <p>Basic</p>
@@ -168,21 +169,21 @@ assets    <section id="about">
             <h2 class="experience-sub-title">Backend & Tools</h2>
             <div class="article-container">
               <article>
-                <img src="assets/checkmark.png" class="icon" />
+                <img src="assets/csharp.png" class="icon" />
                 <div>
                   <h3>C# / .NET</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
               <article>
-                <img src="assets/checkmark.png" class="icon" />
+                <img src="assets/mssql.png" class="icon" />
                 <div>
                   <h3>MSSQL</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
               <article>
-                <img src="assets/checkmark.png" class="icon" />
+                <img src="assets/git.png" class="icon" />
                 <div>
                   <h3>Git</h3>
                   <p>Intermediate</p>
@@ -305,3 +306,4 @@ assets    <section id="about">
     <script src="script.js"></script>
   </body>
 </html>
+github-portfolio/index.html at main · yukseelalkis/github-portfolio 
