--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </section>
 
-assets    <section id="about">
+    <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
@@ -111,7 +111,7 @@ assets    <section id="about">
     I specialize in Flutter and .NET development, with a strong passion for building efficient,
     user-friendly, and visually appealing mobile applications and backend systems.
   </p>
-  <p>
+  <p>FRZZ
     I enjoy exploring new technologies and continuously improving my skills.
     With a solid foundation in software engineering principles, I am eager to contribute to impactful projects
     and grow as a mobile & backend developer.
@@ -303,7 +303,7 @@ assets    <section id="about">
       <p>Copyright © 2025 Yüksel Alkış. All Rights Reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
 github-portfolio/index.html at main · yukseelalkis/github-portfolio 
